<resources>
    <string name="app_name">Restaurant Table Booking</string>
    <string name="cus">Customer</string>
    <string name="res">Restaurant</string>
    <string name="rtb">Restaurent Table Booking</string>
    <string name="login">Login</string>
    <string name="mail">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot">Forgot Password?</string>
    <string name="sign">Sign Up</string>
    <string name="reg">Regitration</string>
    <string name="reg1">1/2</string>
    <string name="reg2">2/2</string>
    <string name="restname">Restaurant Name</string>
    <string name="ownername">Owner Name</string>
    <string name="shopno">Restaurant No(Door No)</string>
    <string name="street">Street/Road Name</string>
    <string name="village">Village/Area Name</string>
    <string name="city">City/Taluk Name</string>
    <string name="district">District Name</string>
    <string name="State">State Name</string>
    <string name="pincode">Pincode</string>
    <string name="next">Next</string>
    <string name="phone">Phone Number</string>
    <string name="upi">UPI Id</string>
    <string name="category">Hotel Category</string>
    <string name="add">Address</string>
    <string name="cusn">Customer Name</string>
    <string name="door">Door No</string>
    <string name="regis">Register </string>
    <string name="lwp">Login with phone</string>
    <string name="verify">Verify</string>
    <string name="cart">Cart</string>
    <string name="sugg">Suggestion</string>
    <string name="home">Home</string>
    <string name="booked_details">Booked</string>
    <string name="list_of_payment_details">Payment</string>
    <string name="reserved_time_slot">Time slot</string>
    <string name="cus_profile">Profile</string>
    <string name="name">Name</string>
    <string name="edit">Edit</string>
    <string name="no_of_seats">No of Seats</string>
    <string name="add_food">Add Food</string>
    <string name="food_name">Food Name</string>
    <string name="food_id">Food Id</string>
    <string name="food_price">Food Price</string>
    <string name="food_quantity">Food Quantity</string>
    <string name="stock">Stock</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="submit">Submit</string>
    <string name="id">ID</string>
    <string name="price">Price</string>
    <string name="f_category">Category</string>
    <string name="update">Update</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
</resources>