<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Customer_Login"
    android:background="#17B169"
    android:padding="18dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:id="@+id/cus_relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/cus_login_back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:srcCompat="@drawable/back_icon"
                tools:ignore="VectorDrawableCompat" />


            <TextView
                android:id="@+id/cus_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="#17B169"
                android:fontFamily="@font/aclonica"
                android:paddingTop="70sp"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="#000"
                android:textSize="40sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cus_relativeLayout">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70sp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="#FDFBF1"
                        app:cardCornerRadius="5dp"
                        app:cardUseCompatPadding="true"
                        app:contentPadding="3dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mail"
                            android:textColorHint="#000"
                            app:boxBackgroundColor="#FDFBF1"
                            app:boxStrokeColor="#000"
                            app:boxStrokeWidthFocused="2dp"
                            app:endIconMode="clear_text"
                            app:endIconTint="#000"
                            app:hintTextColor="#000"
                            app:startIconTint="#000">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/cus_login_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        app:cardBackgroundColor="#FDFBF1"
                        app:cardCornerRadius="5dp"
                        app:cardUseCompatPadding="true"
                        app:contentPadding="3dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:textColorHint="#000"
                            app:boxBackgroundColor="#FDFBF1"
                            app:boxStrokeColor="#000"
                            app:boxStrokeWidthFocused="2dp"
                            app:endIconTint="#000"
                            app:hintTextColor="#000"
                            app:passwordToggleDrawable="@drawable/show_password_selector"
                            app:passwordToggleEnabled="true"
                            app:startIconTint="#000">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/cus_login_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.cardview.widget.CardView>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25sp">

                        <CheckBox
                            android:id="@+id/cus_login_check"
                            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:buttonTint="#000"
                            android:text="@string/remember_me"
                            android:textColor="#000"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/cus_login_forgot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="20sp"
                            android:background="#00000000"
                            android:paddingRight="8dp"
                            android:text="@string/forgot"
                            android:textColor="#000"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:paddingEnd="8dp"
                            android:layout_marginStart="20sp" />
                    </RelativeLayout>
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25sp"
                    app:cardBackgroundColor="#FDFBF1"
                    app:cardCornerRadius="5dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="3dp">

                    <Button
                        android:id="@+id/cus_login_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#000"
                        android:fontFamily="@font/aclonica"
                        android:text="@string/login"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>